--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+
     <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-    <script src="menu.js"></script>
+
+    <h1 id="p">Menú</h1>
+
+<a href="https://www.ejemplo.com" target="_blank" class="link1">
+  <h1>
+    <span>T</span><span>U</span><span>T</span><span>O</span><span>R</span><span>I</span><span>A</span><span>L</span>
+  </h1>
+</a>
+
+<a href="https://www.ejemplo.com" target="_blank" class="link2">
+  <h1>
+    <span>C</span><span>Á</span><span>M</span><span>A</span><span>R</span><span>A</span>
+  </h1>
+</a>
+
+<a href="https://www.ejemplo.com" class="link3">
+  <h1>
+    <span>G</span><span>A</span><span>L</span><span>E</span><span>R</span><span>Í</span><span>A</span>
+  </h1>
+</a>
+
+<script src="scketch.js"></script>
 </body>
 </html>
