--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Texto con enlace -->
   <div id="texto">
-    <a href="menu/menu.html" target="_blank">
+    <a href="menu/menu.html">
       <span>ᔕ</span><span>Ꭵ</span><span>Ǥ</span><span>ᑌ</span><span>ᗴ</span><span>ᔕ</span>
       <span> </span>
       <span>丅</span><span>ᑌ</span>
