--- a/camara/camara.html
+++ b/camara/camara.html
@@ -11,6 +11,8 @@
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
     <script src="https://unpkg.com/ml5@1/dist/ml5.js"></script>
+    <!--script supabase-->
+    <!--recuperar nombre de la foto-->
 
   </head>
 
