--- a/menu/menu.html
+++ b/menu/menu.html
@@ -12,19 +12,19 @@
 
     <h1 id="p">Menú</h1>
 
-<a href="https://www.ejemplo.com" target="_blank" class="link1">
+<a href="/tutorial/tutorial.html" class="link1">
   <h1>
     <span>T</span><span>U</span><span>T</span><span>O</span><span>R</span><span>I</span><span>A</span><span>L</span>
   </h1>
 </a>
 
-<a href="https://www.ejemplo.com" target="_blank" class="link2">
+<a href="/camara/camara.html" class="link2">
   <h1>
     <span>C</span><span>Á</span><span>M</span><span>A</span><span>R</span><span>A</span>
   </h1>
 </a>
 
-<a href="https://www.ejemplo.com" class="link3">
+<a href="/galeria/galeria.html" class="link3">
   <h1>
     <span>G</span><span>A</span><span>L</span><span>E</span><span>R</span><span>Í</span><span>A</span>
   </h1>
