--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial</title>
-    <link rel="stylesheet" href="tutorial.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tutorial</title>
+  <link rel="stylesheet" href="tutorial.css">
 </head>
 <body>
-    <script src="tutorial.html"></script>
+    <div class="video-container">
+        <video id="tutoVideo" controls>
+            <source src="/assets/Tutorial.mp4" type="video/mp4">
+            Tu navegador no soporta el formato de video.
+        </video>
+    </div>
+
+  <script src="tutorial.js"></script>
 </body>
 </html>
