--- a/camara/camara.html
+++ b/camara/camara.html
@@ -17,6 +17,11 @@
   </head>
 
   <body>
+    <video id="filtro-video" autoplay loop muted playsinline>
+      <source src="/assets/Fondocam.mp4" type="video/mp4">
+      Tu navegador no soporta video.
+    </video>
+
     <script src="sketch.js"></script>
   </body>
 </html>
