--- a/menu/menu.html
+++ b/menu/menu.html
@@ -12,19 +12,19 @@
     <h1 id="p">Menú</h1>
 
     <div id="texto">
-      <a href="/tutorial/tutorial.html" class="link1">
+      <a href="../tutorial/tutorial.html" class="link1">
         <h1><span>Tutorial</span></h1>
       </a>
     </div>
 
     <div id="texto">
-      <a href="/camara/camara.html" class="link2">
+      <a href="../camara/camara.html" class="link2">
         <h1><span>Cámara</span></h1>
       </a>
     </div>
 
     <div id="texto">
-      <a href="/galeria/galeria.html" class="link3">
+      <a href="../galeria/galeria.html" class="link3">
         <h1><span>Galería</span></h1>
       </a>
     </div>
