--- a/camara/camara.html
+++ b/camara/camara.html
@@ -10,7 +10,10 @@
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/ml5@1/dist/ml5.js"></script>
+
+    <!-- ml5 con BodyPose -->
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
 
