--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
     <link rel="stylesheet" href="menu.css">
 </head>
 <body>
+
+    <!-- VIDEO DE FONDO -->
+    <video id="bg-video" autoplay loop muted playsinline>
+        <source src="../assets/fondosigtu.mp4" type="video/mp4">
+    </video>
 
     <h1 id="p">Menú</h1>
 
@@ -28,9 +32,6 @@
         <h1><span>Galería</span></h1>
       </a>
     </div>
-
-    <!-- Contenedor para p5.js -->
-    <div id="canvas-container"></div>
 
     <script src="menu.js"></script>
 </body>
