--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -9,7 +9,7 @@
 <body>
     <div class="video-container">
         <video id="tutoVideo" controls>
-            <source src="/assets/Tutorial.mp4" type="video/mp4">
+            <source src="../assets/Tutorial.mp4" type="video/mp4">
             Tu navegador no soporta el formato de video.
         </video>
     </div>
