--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="canvas-container"></div>
+
+  <video id="bg-video" autoplay loop muted playsinline>
+    <source src="assets/fondosigtu.mp4" type="video/mp4">
+  </video>
 
   <div id="canvas-container"></div>
 
-  <!-- Capa negra -->
   <div id="overlay-box"></div>
 
-  <!-- Texto con enlace -->
   <div id="texto">
     <a href="menu/menu.html">
       <span>Sigues </span><span>Tú</span>
