--- a/menu/menu.html
+++ b/menu/menu.html
@@ -8,28 +8,31 @@
 </head>
 <body>
 
-    <!-- VIDEO DE FONDO -->
+   
     <video id="bg-video" autoplay loop muted playsinline>
         <source src="../assets/fondosigtu.mp4" type="video/mp4">
     </video>
 
-    <h1 id="p">Menú</h1>
+    <h1 id="p">MENÚ</h1>
 
-    <div id="texto">
+    
+    <div class="menu-box box1">
       <a href="../tutorial/tutorial.html" class="link1">
-        <h1><span>Tutorial</span></h1>
+        <h1><span>TUTORIAL</span></h1>
       </a>
     </div>
 
-    <div id="texto">
+    
+    <div class="menu-box box2">
       <a href="../camara/camara.html" class="link2">
-        <h1><span>Cámara</span></h1>
+        <h1><span>CÁMARA</span></h1>
       </a>
     </div>
 
-    <div id="texto">
+   
+    <div class="menu-box box3">
       <a href="../galeria/galeria.html" class="link3">
-        <h1><span>Galería</span></h1>
+        <h1><span>GALERÍA</span></h1>
       </a>
     </div>
 
