--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="tutorial.css">
 </head>
 <body>
+
+
+    <video id="bg-video" autoplay loop muted playsinline>
+        <source src="../assets/fondosigtu.mp4" type="video/mp4">
+    </video>
+
     <div class="video-container">
         <video id="tutoVideo" controls>
             <source src="../assets/Tutorial.mp4" type="video/mp4">
