--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -18,7 +18,7 @@
     </video>
 
     
-    <button id="playBtn">▶</button>
+    <button id="playBtn">▶Animación</button>
 
     
     <div id="animationLayer">
