--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
   <div id="canvas-container"></div>
 
-  <div id="overlay-box"></div>
-
-  <div id="texto">
+  
+  <div id="texto-box">
     <a href="menu/menu.html">
       <span>Sigues </span><span>Tú</span>
     </a>
