--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -25,7 +25,7 @@
         <div id="slideshow"></div>
     </div>
 
-    <h2>Galería</h2>
+    <h2>GALERÍA</h2>
     <div id="galeria"></div>
 
     <script src="galeria.js"></script>
