--- a/camara/camara.html
+++ b/camara/camara.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cámara con Temporizador y Supabase</title>
+    <title>Cámara</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
